--- a/ios/MPBook/Info.plist
+++ b/ios/MPBook/Info.plist
@@ -60,6 +60,7 @@
 		<string>Roboto-Medium.ttf</string>
 		<string>Roboto-Regular.ttf</string>
 		<string>Roboto-Thin.ttf</string>
+		<string>Feather.ttf</string>
 	</array>
 </dict>
 </plist>
